# api/main.py
@@ -9,7 +9,7 @@ from api.store import (
     query_media,
     query_mediabiasfactcheck,
 )
-from api.tools.youtube import Video, search_youtube_channel
+from api.tools.youtube import Video, youtube_search, youtube_transcripts
 from lib.auth import verify_apikey
 
 app = FastAPI()
@@ -48,55 +48,38 @@ async def search_media(
     return results[offset:]
 
 
-@app.get("/youtube", response_model=List[Video])
-async def search_youtube(
-    query: str = "",
+@app.get("/media-videos", response_model=List[Video])
+async def get_youtube_search(
+    channels: str = None,
+    query: str = None,
     period_days: int = 3,
     max_channels: int = 8,
     max_videos_per_channel: int = 3,
-    channels: str = None,
     get_descriptions: bool = False,
     get_transcripts: bool = False,
     _: None = Depends(verify_apikey),
 ) -> List[Video]:
-    tmp: Dict[str, List[Video]] = {}
-    if channels:
-        channels_arr = channels.lower().split(",")
-        media = [
-            item
-            for item in get_data()
-            if item["Youtube"].lower().replace("https://www.youtube.com/", "")
-            in channels_arr
-        ]
-    else:
-        if query == "":
-            raise HTTPException(
-                status_code=400, detail="No query given when no channels are provided!"
-            )
-        media = await query_media(query, top_k=max_channels * 2)
-    for item in media:
-        if item["Youtube"] == "n/a":
-            continue
-        ret = search_youtube_channel(
-            item["Youtube"],
-            query,
-            period_days,
-            max_videos_per_channel,
-            get_descriptions,
-            get_transcripts,
+    if not (channels or query):
+        raise HTTPException(
+            status_code=400, detail="No query given when no channels are provided!"
         )
-        if len(ret) > 0:
-            if len(ret) > max_videos_per_channel:
-                tmp[item["Name"]] = ret[:max_videos_per_channel]
-            else:
-                tmp[item["Name"]] = ret
-        if len(tmp.keys()) >= max_channels:
-            break
-    res: List[Video] = []
-    for videos in tmp.values():
-        res.extend(videos)
-    print("Number of videos found: " + str(len(res)))
-    return res
+    return await youtube_search(
+        channels=channels,
+        query=query,
+        period_days=period_days,
+        max_channels=max_channels,
+        max_videos_per_channel=max_videos_per_channel,
+        get_descriptions=get_descriptions,
+        get_transcripts=get_transcripts,
+    )
+
+
+@app.get("/youtube-transcripts", response_model=Dict[str, str])
+async def get_youtube_transcripts(
+    ids: str,
+    _: None = Depends(verify_apikey),
+) -> Dict[str, str]:
+    return youtube_transcripts(ids)
 
 
 @app.get("/privacy")
